@@ -1,3 +1,10 @@
+12/4/2020
+================
+* App now loads thumbnails via JS and JSON instead of handling it with a Jinja 2 template
+	* Searching/Filtering might be easier to implement
+* Shifted around js and put them in files
+* Added refresh and task page buttons at the top of the home page
+
 11/22/2020
 ================
 * App now downloads in parallel. `max_concurrent_downloads` in `config.py` determines the maximum number of downloads that can be done in parallel.
